# every-simplicity

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  package-lock.json  package.json  problem-statement.md  start-site.ps1
.github/workflows/: deploy.yml
cli/: .env.example  .env.master  Cargo.toml  Dockerfile  entrypoint.sh  parse.py  shrinc-test.simf  transpile.py
cli/src/: canonicalize.rs  main.rs
cli/wasm-src/: Cargo.toml
data/programs/BlockstreamResearch/SimplicityHL/: array_fold.debug.simb  array_fold.simb  array_fold.simb.mermaid  array_fold.toml  array_fold_2n.debug.simb  array_fold_2n.simb  array_fold_2n.simb.mermaid  array_fold_2n.toml  cat.debug.simb  cat.simb  cat.simb.mermaid  cat.toml  ctv.debug.simb  ctv.simb  ctv.simb.mermaid  ctv.toml  escrow_with_delay.debug.simb  escrow_with_delay.simb  escrow_with_delay.simb.mermaid  escrow_with_delay.toml  hash_loop.debug.simb  hash_loop.simb  hash_loop.simb.mermaid  hash_loop.toml  hodl_vault.debug.simb  hodl_vault.default.simb.mermaid  hodl_vault.simb  hodl_vault.toml  htlc.debug.simb  htlc.simb  htlc.simb.mermaid  htlc.toml  last_will.debug.simb  last_will.default.simb  last_will.default.simb.mermaid  last_will.toml  non_interactive_fee_bump.debug.simb  non_interactive_fee_bump.default.simb  non_interactive_fee_bump.simb.mermaid  non_interactive_fee_bump.toml  (+46 more)
data/programs/BlockstreamResearch/shrincs-simplicity-verifier/: lamport_main.simb  lamport_main.toml  (+1 more)
meta/tasks/backlog/: add-distance-type.md
meta/tasks/done/: 01-repo-scaffold.md  02-cli-add-command.md  03-static-site.md  04-github-actions-deploy.md  site-summary-progress-bars.md
meta/tasks/to_test/: word-cloud-secondary-tabs.md
site/: build.js
wasm/: Cargo.toml
wasm/src/: lib.rs
(+63 files in other folders)
