[package]
name = "simplicity-catalog"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "simplicity-catalog"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.22", features = ["serde"] }
dotenvy = "0.15"
simplicity-lang = { version = "0.7.0", features = ["base64"] }
