[package]
name = "simplicityhl-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
serde_json = "1"
base64 = "0.21"
simplicityhl = { git = "https://github.com/BlockstreamResearch/SimplicityHL", branch = "master", features = ["serde"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
